# rtt-lwr-hardware-integration

./: .gitignore  .project  CMakeLists.txt  README.md
KRL_Programs/: FRIControl.src
Modules/: FindXenomai.cmake  boris-robot.urdf
include/: friremote_rt.h  friudp_rt.h  kinematic_chain.h  pid_values_tmp.h  rtt-lwr-robot.hpp
scripts/: lwr_fri.ops  lwr_full.ops
src/: friremote_rt.cpp  friudp_rt.cpp  kinematic_chain (copy).cpp  kinematic_chain.cpp  lwr_fri_component.cpp  lwr_gazebo_component.cpp  rtt-lwr-robot.cpp  rtt-lwr-robot_hooks.cpp
src/parsertools/: KDLParser.cpp  KDLParser.hpp
